<resources>
  <string name="version">3.1.3</string>
  <string name="app_name">日替丼</string>
  <string name="app_formal_name">日替丼 for DQX</string>
  <string name="title_activity_sqexid">ID管理</string>
  <string name="title_activity_login">アカウント登録</string>
  <string name="title_activity_settings">設定</string>
  <string name="title_activity_tobatsu_setting">討伐設定</string>
  <string name="title_activity_tobatsu">日替わり討伐依頼</string>
  <string name="title_activity_boss_card_setting">ボスカード設定</string>
  <string name="title_activity_twitter_setting">Twitter設定</string>
  <string name="title_activity_twitter_auth">Twitter認証</string>
  <string name="title_activity_chara_select">対象キャラクター選択</string>
  <string name="title_activity_boss_card">ボスカード</string>
  <string name="title_activity_farm">モンスター牧場</string>
  <string name="title_activity_tos">利用規約</string>
  <string name="title_activity_debug">デバッグ</string>
  <string name="action_exportlog">ログをエクスポート</string>
  <string name="action_tokenapp">トークン起動</string>
  <string name="action_dqxtools">超便利ツール起動</string>
  <string name="add">追加</string>
  <string name="relogin">再ログイン</string>
  <string name="remove">削除</string>
  <string name="reload">更新</string>
  <string name="loading">ロード中</string>
  <string name="execute">実行</string>
  <string name="ok">OK</string>
  <string name="yes">はい</string>
  <string name="cancel">キャンセル</string>
  <string name="get_pin">PINコード取得</string>
  <string name="lastUpdate">最終更新</string>
  <string name="autopilot">自動巡回</string>
  <string name="text_notification_header">%1$s Pの討伐依頼があります</string>
  <string name="text_notification">%1$s[%2$d匹]@%3$s</string>
  <string name="text_notification_error">取得に失敗したキャラクターがあります</string>
  <string name="text_confirm_delete_account">%1$sを削除します</string>
  <string name="text_error">エラーが発生しました</string>
  <string name="text_output_debug_logs">デバッグログを出力</string>
  <string name="text_confirm_correct_time">1.時刻設定が正しいか確認してください</string>
  <string name="text_verify_access_twitter">2.TwitterサイトでPINコードを取得します\n(数値部分を長押しして範囲指定後、 コピーしてください)</string>
  <string name="text_input_pincode">3.取得したPINコードを入力し、認証ボタンを押します</string>
  <string name="text_after_auth">認証が成功すれば自動で前の画面に戻ります</string>
  <string name="text_target_is_all">全キャラを対象とする</string>
  <string name="text_all_target_summary">登録されている全キャラの中の最高額をtweetします。</string>
  <string name="text_target_characters">対象キャラクター</string>
  <string name="text_get_pin_failed">PINコードが取得できませんでした</string>
  <string name="text_empty_pin">PINコードを入力してください</string>
  <string name="text_auth_failed">認証失敗しました</string>
  <string name="happy_106">ログイン中は処理できません</string>
  <string name="happy_113">体験版では使用不可です</string>
  <string name="happy_1005">ID管理画面で再ログインを行ってください</string>
  <string name="happy_12009">モーモンバザーを設置していません</string>
  <string name="happy_22001">しばらくしてから再実行してください</string>
  <string name="happy_22002">討伐受注不可キャラです</string>
  <string name="happy_99999">メンテナンス中です</string>
  <string name="happy_unknown">エラーが発生しました(%1$d)</string>
  <string name="http_401">再ログインが必要です</string>
  <string name="http_other">ネットワークエラー(%1$s)</string>
  <string name="text_welcome">ようこそ！メニューから\nID管理 -> 追加\nを選択し、ログインすれば\n処理が始まります</string>
  <string name="text_guidance_add_account">メニューから「追加」を選択し\nログインすれば処理が始まります</string>
  <string name="completed_exportfile">エクスポート完了しました</string>
  <string name="pincode">PINコード</string>
  <string name="auth">認証</string>
  <string name="pref_cat_twitter_auth">Twitter認証</string>
  <string name="pref_cat_twitter_linkage_tobatsu">Twitter連携 - 討伐依頼</string>
  <string name="tweet_tobatsu">討伐依頼をツイート</string>
  <string name="tweet_tobatsu_summary">毎朝討伐依頼を取得した後、最高額依頼を自動でツイートします</string>
  <string name="error_already_reported">報告済みです</string>
  <string name="tobatsu_autopilot_summary">毎朝6時過ぎに討伐依頼を自動チェックし更新します</string>
  <string name="boss_card_autopilot_summary">12時間ごとにカードの残り時間を自動チェックします</string>
  <string name="limit_date_notification">近期限を通知</string>
  <string name="limit_date_notification_summary">自動巡回時、期限が近づいたアイテムが有れば通知します</string>
  <string name="notification_left_time_summary">設定した期間より短い有効期限のカードが有れば通知します</string>
  <string name="notification_left_time">通知期限</string>
  <string name="text_exits_limit_items">期限の近いアイテムがあります</string>
  <string name="etc">等</string>
  <string name="agree">同意する</string>
  <string name="disagree">同意しない</string>
  <string name="text_farm_nextSailoutDt">次回船旅</string>
  <string name="text_farm_nearLimitDt">船旅報酬</string>
  <string name="text_farm_isFriendBlueBox">青宝箱</string>
  <string name="text_farm_treasureboxList">宝箱</string>
  <string name="text_farm_grassList">雑草</string>
  <string name="unanchorable">[可]</string>
  <string name="exist">有</string>
  <string name="nonexist">無</string>
  <string name="text_farm_open_box">開箱</string>
  <string name="text_farm_mow">刈草</string>
  <string name="mowed">コイン %1$d個, 経験値 %2$d, その他 %3$d\nを取得しました</string>
  <string name="text_unit">個</string>
  <string name="text_over">以上</string>
  <string name="text_openbox_summary">成功 %1$d件, 失敗 %2$d件</string>
</resources>
