<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center">

  <Button
    android:id="@+id/settingTobatsuView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title_activity_tobatsu_setting"/>

  <Button
    android:id="@+id/settingBossCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title_activity_boss_card_setting"/>

  <Button
    android:id="@+id/settingTwitterView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title_activity_twitter_setting"/>

</LinearLayout>
