<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <Preference
    android:title="@string/title_activity_tobatsu_setting"
    >

    <intent
      android:action="android.intent.action.VIEW"
      android:targetClass="yukihane.dq10don.settings.view.TobatsuSettingActivity"
      android:targetPackage="yukihane.dq10don"
      />

  </Preference>

  <Preference
    android:title="@string/title_activity_boss_card_setting"
    >

    <intent
      android:action="android.intent.action.VIEW"
      android:targetClass="yukihane.dq10don.settings.view.BossCardSettingActivity"
      android:targetPackage="yukihane.dq10don"
      />

  </Preference>

  <Preference
    android:title="@string/title_activity_twitter_setting"
    >

    <intent
      android:action="android.intent.action.VIEW"
      android:targetClass="yukihane.dq10don.settings.view.TwitterSettingActivity"
      android:targetPackage="yukihane.dq10don"
      />

  </Preference>
</PreferenceScreen>